Fix of the lang test and Align of options

--- a/public/landingPage/stylesheets/style.css
+++ b/public/landingPage/stylesheets/style.css
@@ -230,7 +230,7 @@ ul {
 }
 
 .navbar.navbar-fixed-top.scroll-fixed-navbar li{
-  margin-top: 40px!important;
+  margin-top: 34px!important;
 }
 .navbar.navbar-fixed-top .navbar-brand > img{
   position: relative;
